Обновлена папка с проектом

--- a/Project/articles_rus/a_2.html
+++ b/Project/articles_rus/a_2.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="icon" href="../coffee.png">
-    <title>Burning out - Code:Excelso</title>
+    <title>Выгорание - Code:Excelso</title>
     <style>
         @font-face {
             font-family: soft;
@@ -631,7 +631,7 @@
             font-size: 7vh;
             position: absolute;
             top: 6.5vh;
-            left: -25vh;
+            left: -19vh;
         }
 
         #title-pos {
@@ -1038,15 +1038,15 @@
         </div>
     </div>
     <div id="title-pos">
-        <p id="title_n">Burning out</p>
+        <p id="title_n">Выгорание</p>
     </div>
     <div id="building">
 
         <p id="text" style="margin-top:10vh">
-            Your journey within the realm of programming languages continues, as you tread along the internet streets. It’s been a long time since you’ve picked up programming and you’ve learned many new things. At the moment you’re working on an important project, which you know you have to rush to finish. As sleepless nights pass, days start becoming a blur, you begin to think you’re going to melt down like an ice cube right in the middle of your commute. At some point you start thinking: “What’s even the point?” and it’s at this moment in time that you realize that you’re burnt out.
-            <br> While obviously, this isn’t necessarily a programmers’ issue, many still struggle with burnout and ruts, and I’ll make sure to give some basic advice on how to avoid them.<br> Everyone experienced burnout in some shape or form at least once in their lives. But what is it? Well, burnout has three main defining features: it gives a sense that you’re not in control of yourself anymore, you feel emotionally drained and you don’t feel that you’ve achieved something in the end. Imagine getting like 20 assignments in school due the next day. You come home in the evening and the work begins. Of course, you could put in no effort and finish all of them in an hour, but that’s not what you’re about, the end result has to be perfect! The sun rises and you’ve finally finished your task, you’re proud of yourself, you get to the teacher, hand your work in… And then he announces that this task will not be graded, and moves on to the next topic, and the next 10 assignments, which are also due tomorrow. These are the most widespread causes of burnout: excessive workloads, not enough recognition, perfectionism and workaholism. And there are also ruts, creative or working ones, which come hand in hand with burnout. You get into this state after doing the same thing over and over again, like working with databases or creating excessively working with responsive web design, or just back-end programming in general.
-            <br> Burnout however, is treatable. The most general advice that could be given in these situations is to have some time for yourself: take a breather, try to relax with some good coffee or music of choice. Distract yourself from work, let worries slip away one by one with each deep breath. Another good general advice would be to improve your sleeping schedule. Now, it would be hypocritical of me to give out advice like “Go to bed at 11 pm at max” mainly because I’m currently writing this at 1 am. But any change in that direction is positive: try to pull less all-nighters and slowly move your sleeping time closer to the unreachable ideal of 11 pm. This particular point has helped me a lot in recent months. But if you feel overworked, it’s almost like you don’t have time for long walks. Well, relaxation can be done on 15 minute breaks. In the end, you’ll be more productive if you took a short break than you would be if you didn’t. Another piece of advice I can give out in this case is to brighten up your life. Pick up an unusual hobby that would be easy to integrate into your everyday routine, and it doesn’t have to be anything groundbreaking, it can be something as simple as getting a new brand of groceries every time you go shopping, or collecting trinkets from coffee shops, like these small packets of sugar. It doesn’t have to be just focused on buying something, just get some simple task for yourself that would be different every time you do it, and it will stand out of the blur that are days of all-nighters and overworking. If you’re stuck in a rut and struggle to find any motivation or ideas for your programs, a change of pace is a treatment that works every time. During a break, look up growing and loved languages on stackoverflow and try to write a simple program in it and finish a small game project which shouldn’t normally take longer than a few hours to complete. Exceptionally radical change, like switching from desktop to web or data analysis, can provide exceptionally good results. Same goes for artists: you have so many mediums to choose from – so pick the one that you find the hardest to do and give yourself a bit of a challenge: it’s always good to switch things up every once in a while!
-            <br> In conclusion, burning out and getting stuck in a creative rut is pretty bad. But even the smallest changes can lighten up the situation. After all, everything is going to be just fine, just keep making steps in the right direction and change things up accordingly to your current situation.
+            Ваше путешествие по миру языков программирования продолжается, а вы всё движетесь по улицам Интернета. Прошло уже много времени с момента начала изучения программирования и вы узнали много нового. Сейчас вы работаете над очень важным проектом, который нужно закончить как можно скорее. Бессонные ночи идут одна за другой, дни смазываются и сливаются в один, вы начинаете думать, что сейчас, посреди вагона метро вы растаете как кубик льда. В какой-то момент вас посещает мысль «А зачем вообще это всё? Какой смысл?», и в этот момент вы понимаете, что вы выгорели.
+            <br> Разумеется, с этим сталкиваются не только программисты,но общий совет о том, как избежать таких ситуаций, может быть полезен всем. <br> Наверное, все проходили через выгорание в том или ином виде хотя бы раз в жизни. Но что это вообще такое? В целом, у выгорания есть 3 основных характеристики: оно даёт ощущение потери контроля над собой, вы начинаете чувствовать себя эмоционально истощённым и в итоге вы не чувствуете удовлетворения от достигнутого. Это как получить задание написать 20 сочинений, необходимых к сдаче на следующий день. Вы приходите домойЮ и начинается работа. Конечно, можно было бы не прикладывать никаких усилий и закончить все где-то за час, но так дела не делаются, результат должен быть идеален! Встаёт солнце, и вы закончили работу. Вы гордитесь собой, подходите к учителю и сдаёте работу… А он объявляет, что за работу не будет ставиться оценка, переходит к следующей теме и задаёт ещё 10 сочинений, и все опять на завтра. В этом и заключаются основные причины выгорания: большое количество работы, недостаточное поощрение за её выполнение, перфекционизм и трудоголизм.
+            <br> От выгорания однако можно избавиться. Самый общий совет, который только может быть дан в этой ситуации, это оставить время для себя: нужно выдохнуть, постараться расслабиться с помощью хорошего кофе и музыки. Нужно отвлечь себя от работы, дать волнению медленно ускользнуть с каждым выдохом. Ещё одним неплохим общим советом было бы задать чёткий режим сна. Было бы неправильно с моей стороны сейчас сказать что-то вроде «Нужно ложиться спать в 11 часов максимум», в основном потому что даже этот текст я пишу в час ночи. Но любое изменение в лучшую сторону значимо: меньше полностью бессонных ночей, и необходимо постараться постепенно приближать время сна к хотя бы 12, минута за минутой. Но если вы чувствуете, что вы перерабатываете, то времени на прогулки может и не быть. Но для расслабления далеко не всегда нужен час. Иногда достаточно и 15-минутного перерыва. В итоге вы будете чувствовать себя лучше и будете продуктивнее, чем без этого перерыва. Также хороший совет это добавить в жизнь яркую мелочь. Начните необычное хобби, как коллекционирование пакетиков сахара из кофеен, или покупка нового вида продуктов в магазине. Это хобби необязательно должно быть связано с покупкой чего-либо, достаточно поставить перед собой соответствующую задачу, которая была бы новой каждый раз. Любая мелочь в итоге будет выделяться на фоне смазанных дней и рабочих ночей. Также помогает изменение направления. Можно попробовать поискать на stackoverflow новые и интересные языки и написать несколько простых программ на нём.
+            <br> В заключение, выгорание – это плохо. Но даже самые небольшие шаги в нужном направлении меняют ситуацию к лучшему. Главное – понимать, что в конце концов, конец света не наступит даже в худшем случае, и что свё будет хорошо.
 
         </p>
     </div>
@@ -1062,20 +1062,20 @@
         </div>
     </div>
     <div id="sidebar" style="left:100vw;">
-        <div id="learn" onclick="lrn()">Tutorials
+        <div id="learn" onclick="lrn()">О языках
             <div id="learn_desc">
-                <div id="learn_desc_fix">Learn more about interesting languages in a colorful way!</div>
+                <div id="learn_desc_fix">Узнайте больше о языках на красочных страницах!</div>
             </div>
         </div>
-        <div id="tend" onclick="atc()">Articles
+        <div id="tend" onclick="atc()">Статьи
             <div id="tend_desc">
-                <div id="tend_desc_fix">Read up about the tendencies of programming languages</div>
+                <div id="tend_desc_fix">Прочтите пару полезных статей для программистов!</div>
             </div>
         </div>
         <div id="lang-pos">
             <div id="lang">
-                <div id="rus" onclick="window.location.assign('../articles_rus/index.html')">Russian</div>
-                <div id="eng" onclick="window.location.assign('index.html')">English</div>
+                <div id="rus" onclick="window.location.assign('index.html')">Russian</div>
+                <div id="eng" onclick="window.location.assign('../articles/index.html')">English</div>
             </div>
         </div>
         <div id="about">
