--- a/Project/articles_rus/a_3.html
+++ b/Project/articles_rus/a_3.html
@@ -4,7 +4,7 @@
 
 <head>
     <link rel="icon" href="../coffee.png">
-    <title>Burning out - Code:Excelso</title>
+    <title>Новое начало - Code:Excelso</title>
     <style>
         @font-face {
             font-family: soft;
@@ -23,6 +23,7 @@
         body {
             height: 100%;
             background-image: linear-gradient(#f5d6e0, #e699b2);
+            background-color: #afeeee;
             padding: 0;
             overflow-x: hidden;
         }
@@ -40,7 +41,7 @@
 
         #sb_click_fix {
             position: absolute;
-            left: -7vh;
+            left: -5vh;
             top: 0;
         }
 
@@ -174,7 +175,7 @@
         #text {
             color: palevioletred;
             font-family: soft;
-            margin-left: 4vh;
+            margin: 2vh;
         }
 
         #hm {
@@ -630,8 +631,8 @@
             font-family: soft;
             font-size: 7vh;
             position: absolute;
-            top: 6.5vh;
-            left: -25vh;
+            top: 2.5vh;
+            left: -23vh;
         }
 
         #title-pos {
@@ -903,6 +904,7 @@
             position: absolute;
             left: 12.25vh;
         }
+
     </style>
 </head>
 
@@ -1038,16 +1040,15 @@
         </div>
     </div>
     <div id="title-pos">
-        <p id="title_n">Burning out</p>
+        <p id="title_n">Новое начало</p>
     </div>
     <div id="building">
 
-        <p id="text" style="margin-top:10vh">
-            Your journey within the realm of programming languages continues, as you tread along the internet streets. It’s been a long time since you’ve picked up programming and you’ve learned many new things. At the moment you’re working on an important project, which you know you have to rush to finish. As sleepless nights pass, days start becoming a blur, you begin to think you’re going to melt down like an ice cube right in the middle of your commute. At some point you start thinking: “What’s even the point?” and it’s at this moment in time that you realize that you’re burnt out.
-            <br> While obviously, this isn’t necessarily a programmers’ issue, many still struggle with burnout and ruts, and I’ll make sure to give some basic advice on how to avoid them.<br> Everyone experienced burnout in some shape or form at least once in their lives. But what is it? Well, burnout has three main defining features: it gives a sense that you’re not in control of yourself anymore, you feel emotionally drained and you don’t feel that you’ve achieved something in the end. Imagine getting like 20 assignments in school due the next day. You come home in the evening and the work begins. Of course, you could put in no effort and finish all of them in an hour, but that’s not what you’re about, the end result has to be perfect! The sun rises and you’ve finally finished your task, you’re proud of yourself, you get to the teacher, hand your work in… And then he announces that this task will not be graded, and moves on to the next topic, and the next 10 assignments, which are also due tomorrow. These are the most widespread causes of burnout: excessive workloads, not enough recognition, perfectionism and workaholism. And there are also ruts, creative or working ones, which come hand in hand with burnout. You get into this state after doing the same thing over and over again, like working with databases or creating excessively working with responsive web design, or just back-end programming in general.
-            <br> Burnout however, is treatable. The most general advice that could be given in these situations is to have some time for yourself: take a breather, try to relax with some good coffee or music of choice. Distract yourself from work, let worries slip away one by one with each deep breath. Another good general advice would be to improve your sleeping schedule. Now, it would be hypocritical of me to give out advice like “Go to bed at 11 pm at max” mainly because I’m currently writing this at 1 am. But any change in that direction is positive: try to pull less all-nighters and slowly move your sleeping time closer to the unreachable ideal of 11 pm. This particular point has helped me a lot in recent months. But if you feel overworked, it’s almost like you don’t have time for long walks. Well, relaxation can be done on 15 minute breaks. In the end, you’ll be more productive if you took a short break than you would be if you didn’t. Another piece of advice I can give out in this case is to brighten up your life. Pick up an unusual hobby that would be easy to integrate into your everyday routine, and it doesn’t have to be anything groundbreaking, it can be something as simple as getting a new brand of groceries every time you go shopping, or collecting trinkets from coffee shops, like these small packets of sugar. It doesn’t have to be just focused on buying something, just get some simple task for yourself that would be different every time you do it, and it will stand out of the blur that are days of all-nighters and overworking. If you’re stuck in a rut and struggle to find any motivation or ideas for your programs, a change of pace is a treatment that works every time. During a break, look up growing and loved languages on stackoverflow and try to write a simple program in it and finish a small game project which shouldn’t normally take longer than a few hours to complete. Exceptionally radical change, like switching from desktop to web or data analysis, can provide exceptionally good results. Same goes for artists: you have so many mediums to choose from – so pick the one that you find the hardest to do and give yourself a bit of a challenge: it’s always good to switch things up every once in a while!
-            <br> In conclusion, burning out and getting stuck in a creative rut is pretty bad. But even the smallest changes can lighten up the situation. After all, everything is going to be just fine, just keep making steps in the right direction and change things up accordingly to your current situation.
-
+        <p id="text" style="margin-top:10.5vh">
+            Мир языков программирования кажется почти безграничным. Когда этот дивный новый мир становится открыт, легко быть подхваченным и унесённым в водовороте и оказаться дезориентированным. Чтобы избежать этого, нужно организовать свой порядок изучения программирования.
+            <br>Я начал своё путешествие с Java. В то время, все эти технологии и возможности, столь внезапно открывшиеся передо мной, казались мне невообразимыми. Я начал экспериментировать, и создал множество разных десктоп-приложений. То, что я хочу сказать, не имеет ничего общего с плохими рисунками в MS Paint, которые я делал для тех игр, а скорее с тем, что для того, чтобы начать, нужна хорошая основа, от которой нужно оттолкнуться. Понимание базового синтаксиса Java помогло мне изучить множество новых языков, а после проведения некоторых экспериментов, просто взять и выучить новый язык будет гораздо проще, чем кажется. И хотя уметь программировать на Java бесспорно полезно, я бы порекомендовал начать с чего-нибудь более общего, как, например, С++.
+            <br> После того, как несколько собственных проектов на основном языке окажутся позади, приходит момент, когда идея изучить новый начинает обретать смысл. Но вот в чём проблема: какой же из них выбрать? Раз уж я так сильно раздуваю из мухи слона, этот процесс должен быть очень важным, так? Ну, да, он важен, просто не настолько сильно, как кажется. А чтобы ещё больше упростить этот процесс, я классифицировал языки по применению. Для начала, есть общие, более известные, скорее всего удобные для создания десктоп-приложений, как классическая Java, всем известный python, числовой С++. Они также являются неплохими вторыми или третьими языками для изучения. Если вы начали программировать недавно, то я бы посоветовал сначала изучить основы этих трёх и идти в своём темпе, не засоряя голову теми, что ниже. Как-никак, эти три языка вполне твёрдо стоят сами по себе. Далее у нас есть языки, которые больше подходят для разработки мобильных приложений, как Kotlin, Scala и Swift. Есть языки с ещё более конкретной сферой применения, как полезный для создания системных приложений Rust, дивная и смелая Julia, удобная для анализа данных, машинная школа R и важнейший для анализа F#. Следующая группа – для создания веб-приложений: столь удобный Ruby, громкий и чистый Dart, быстрый и свежий Golang, или умный и серьёзный Elixir. Ещё одна группа – языки для разработки игр: простейший GML, формальный и в пиджаке C# или же сияющий ActionScript. ThereЕсть даже отдельная группа языков для написания музыки: ChucK или Reaktor.
+            <br> Итак вот мы открыли документации, расчехлили мембранные клавиатуры, засучили рукава, и начали работу. Однако вскоре встаёт вопрос: «А что теперь?». Что же, более запутанные языки сложны для изучения сами по себе, а для более интересного изучения простых языков можно поставить перед собой соответствующие задачи. Если не получается ничего придумать, то не беда - репозиторий 99-problems на GitHub и множество подобных – кладезь отличных упражнений для разных языков, где некоторые могут быть простыми, а некоторые – достаточно трудными.<br> В заключение, программировать бывает сложно, а начинать с нуля – ещё сложнее. Но если у вас есть хотя бы общее предсталение о том, чего вы хотите достичь… Иногда всё равно будет сложно, но опыт будет гораздо приятнее!
         </p>
     </div>
 
@@ -1062,20 +1063,20 @@
         </div>
     </div>
     <div id="sidebar" style="left:100vw;">
-        <div id="learn" onclick="lrn()">Tutorials
+        <div id="learn" onclick="lrn()">О языках
             <div id="learn_desc">
-                <div id="learn_desc_fix">Learn more about interesting languages in a colorful way!</div>
+                <div id="learn_desc_fix">Узнайте больше о языках на красочных страницах!</div>
             </div>
         </div>
-        <div id="tend" onclick="atc()">Articles
+        <div id="tend" onclick="atc()">Статьи
             <div id="tend_desc">
-                <div id="tend_desc_fix">Read up about the tendencies of programming languages</div>
+                <div id="tend_desc_fix">Прочтите пару полезных статей для программистов!</div>
             </div>
         </div>
         <div id="lang-pos">
             <div id="lang">
-                <div id="rus" onclick="window.location.assign('../articles_rus/index.html')">Russian</div>
-                <div id="eng" onclick="window.location.assign('index.html')">English</div>
+                <div id="rus" onclick="window.location.assign('index.html')">Russian</div>
+                <div id="eng" onclick="window.location.assign('../articles/index.html')">English</div>
             </div>
         </div>
         <div id="about">
@@ -1110,6 +1111,7 @@
                 document.getElementById("sidebar").style.left = "100vw";
             }
         }
+
     </script>
 </body>
 
