--- a/Project/articles_rus/index.html
+++ b/Project/articles_rus/index.html
@@ -3,8 +3,8 @@
 <meta charset="utf-8" ontent="width=device-width">
 
 <head>
-    <title>Articles - Code:Excelso</title>
     <link rel="icon" href="../coffee.png">
+    <title>Статьи - Code:Excelso</title>
     <style>
         @font-face {
             font-family: soft;
@@ -15,7 +15,7 @@
             font-family: rigid;
             src: url(../reason.otf);
         }
-        
+
         body {
             background-color: #afeeee;
             padding: 0;
@@ -119,7 +119,7 @@
         }
 
         #building {
-            padding-top:20vh;
+            padding-top: 20vh;
             background-color: #eee8aa;
             width: 80vw;
             height: 50vh;
@@ -136,6 +136,7 @@
             height: 5vh;
             background-color: #661933;
         }
+
         #img {
             position: absolute;
             left: -15vw;
@@ -209,6 +210,7 @@
             position: absolute;
             top: -1vh;
         }
+
         #roof-b-s {
             position: absolute;
             left: 0;
@@ -256,45 +258,53 @@
             background-color: #f5f5f5;
             transition: background-color 1s ease;
         }
+
         #image {
             position: absolute;
-            height:auto;width:auto;
+            height: auto;
+            width: auto;
             transform: scale(0.5);
-            left:-50vw;top:-40vh;
+            left: -50vw;
+            top: -40vh;
         }
+
         #hha {
             color: palevioletred;
             font-family: soft;
             margin-left: 3vh;
-            font-size:4vh;
+            font-size: 4vh;
             text-decoration: none;
         }
+
         #ah {
-            margin-top:0;
-            margin-left:3vh;
+            margin-top: 0;
+            margin-left: 3vh;
             color: palevioletred;
             font-family: soft;
         }
+
         #sun {
             position: absolute;
-            left:75vw;
-            top:10vh;
-            width:25vh;
-            height:25vh;
+            left: 75vw;
+            top: 10vh;
+            width: 25vh;
+            height: 25vh;
             z-index: -3;
             background-color: #f0d6ac;
             border-radius: 100%;
             overflow: hidden;
         }
+
         #sun2 {
             position: absolute;
-            left:8vh;
-            top:-16vh;
-            width:31vh;
-            height:31vh;
+            left: 8vh;
+            top: -16vh;
+            width: 31vh;
+            height: 31vh;
             background-color: #f5e3c8;
             border-radius: 100%;
         }
+
         #cloud1_1 {
             position: absolute;
             left: 84px;
@@ -363,6 +373,35 @@
                 left: 50vw;
             }
         }
+
+        #lang {
+            position: absolute;
+            left: -12vh;
+            top: 90vh;
+            width: 100%;
+            text-transform: uppercase;
+            color: white;
+            font-size: 2vh;
+            font-weight: bold;
+        }
+
+        #lang-pos {
+            position: absolute;
+            width: 100%;
+            top: 0;
+            left: 52vw;
+        }
+
+        #rus {
+            position: absolute;
+            padding-right: 1.5vh;
+            border-right: .5vh solid #ff0000;
+        }
+
+        #eng {
+            position: absolute;
+            left: 12.25vh;
+        }
     </style>
 </head>
 
@@ -396,10 +435,10 @@
         </div>
     </div>
     <div id="building">
-        <p onclick="chosen_article()" id="hha">A new beginning</p>
-        <p id="ah" onclick="chosen_article()">What do these even do?</p>
-        <p onclick="chosen_article_2()" id="hha">Burning out</p>
-        <p id="ah" onclick="chosen_article_2()">Have you even slept in the past year?</p>
+        <p onclick="chosen_article()" id="hha">Новое начало</p>
+        <p id="ah" onclick="chosen_article()">Что вообще они делают</p>
+        <p onclick="chosen_article_2()" id="hha">Выгорание</p>
+        <p id="ah" onclick="chosen_article_2()">Как давно вы высыпались?</p>
         <div id="roof-b"></div>
         <div id="roof-b-s"></div>
     </div>
@@ -415,14 +454,20 @@
         </div>
     </div>
     <div id="sidebar" style="left:100vw;">
-        <div id="learn" onclick="learn_pg()">Tutorials
+        <div id="learn" onclick="learn_pg()">О языках
             <div id="learn_desc">
-                <div id="learn_desc_fix">Learn more about interesting languges in a colorful way</div>
+                <div id="learn_desc_fix">Узнайте больше о языках на красочных страницах!</div>
             </div>
         </div>
-        <div id="tend" onclick="article_pg()">Articles
+        <div id="tend" onclick="article_pg()">Статьи
             <div id="tend_desc">
-                <div id="tend_desc_fix">Read up about the tendencies of programming languages</div>
+                <div id="tend_desc_fix">Прочтите пару полезных статей для программистов!</div>
+            </div>
+        </div>
+        <div id="lang-pos">
+            <div id="lang">
+                <div id="rus" onclick="window.location.assign('index.html')">Russian</div>
+                <div id="eng" onclick="window.location.assign('../articles/index.html')">English</div>
             </div>
         </div>
         <div id="about">
@@ -430,16 +475,22 @@
         </div>
     </div>
     <script>
- function main() { window.open("../index.html","_self"); }
+        function main() {
+            window.open("../index.html", "_self");
+        }
+
         function chosen_article() {
-            window.open("a_3.html","_self");
-        } 
+            window.open("a_3.html", "_self");
+        }
+
         function chosen_article_1() {
-            window.open("a_1.html","_self");
-        } 
+            window.open("a_1.html", "_self");
+        }
+
         function chosen_article_2() {
-            window.open("a_2.html","_self");
-        } 
+            window.open("a_2.html", "_self");
+        }
+
         function c() {
             document.getElementById("bar9uk_1").style.backgroundColor = "palevioletred";
             document.getElementById("bar9uk_2").style.backgroundColor = "palevioletred";
