--- a/Project/tutorials_rus/lrnr.html
+++ b/Project/tutorials_rus/lrnr.html
@@ -936,23 +936,6 @@
             left: 12.25vh;
         }
     </style>
-    <script>
-        setInterval(function() {
-            var car1 = document.getElementById("truck1");
-            var car2 = document.getElementById("truck2");
-            var car3 = document.getElementById("truck3");
-            var car4 = document.getElementById("van1");
-            var car5 = document.getElementById("van2");
-            var car5_5 = document.getElementById("van3");
-            car1.style.animationDuration = ((Math.random() * 10) + 2) + "s";
-            car2.style.animationDuration = ((Math.random() * 10) + 2) + "s";
-            car3.style.animationDuration = ((Math.random() * 10) + 2) + "s";
-            car4.style.animationDuration = ((Math.random() * 10) + 2) + "s";
-            car5.style.animationDuration = ((Math.random() * 10) + 2) + "s";
-            car5_5.style.animationDuration = ((Math.random() * 10) + 2) + "s";
-
-        }, 3000);
-    </script>
 </head>
 
 
@@ -1277,6 +1260,54 @@
                                                                                 </div>
                                                                             </div>
                                                                             <script>
+                                                                                function cr1() {
+                                                                                    var dur1 = ((Math.random() * 2) + 1);
+                                                                                    var car1 = document.getElementById("truck1");
+                                                                                    car1.style.animationDelay = dur1 + "s";
+                                                                                    setTimeout(cr1, (2 + dur1) * 2000);
+                                                                                }
+
+                                                                                function cr2() {
+                                                                                    var dur2 = ((Math.random() * 2) + 1);
+                                                                                    var car2 = document.getElementById("truck2");
+                                                                                    car2.style.animationDelay = dur2 + "s";
+                                                                                    setTimeout(cr2, (2 + dur2) * 2000);
+                                                                                }
+
+                                                                                function cr3() {
+                                                                                    var dur3 = ((Math.random() * 2) + 1);
+                                                                                    var car3 = document.getElementById("truck3");
+                                                                                    car3.style.animationDelay = dur3 + "s";
+                                                                                    setTimeout(cr3, (2 + dur3) * 2000);
+                                                                                }
+
+                                                                                function cr4() {
+                                                                                    var dur4 = ((Math.random() * 2) + 1);
+                                                                                    var car4 = document.getElementById("van1");
+                                                                                    car4.style.animationDelay = dur4 + "s";
+                                                                                    setTimeout(cr4, (2 + dur4) * 2000);
+                                                                                }
+
+                                                                                function cr5() {
+                                                                                    var dur1 = ((Math.random() * 2) + 1);
+                                                                                    var car5 = document.getElementById("van2");
+                                                                                    car5.style.animationDelay = dur1 + "s";
+                                                                                    setTimeout(cr5, (2 + dur1) * 2000);
+                                                                                }
+
+                                                                                function cr6() {
+                                                                                    var dur6 = ((Math.random() * 2) + 1);
+                                                                                    var car5_5 = document.getElementById("van3");
+                                                                                    car5_5.style.animationDelay = dur6 + "s";
+                                                                                    setTimeout(cr6, (2 + dur6) * 10000);
+                                                                                }
+                                                                                cr1();
+                                                                                cr2();
+                                                                                cr3();
+                                                                                cr4();
+                                                                                cr5();
+                                                                                cr6();
+                                                                                
                                                                                 codes = ["print ('Hello, World!')", "dim(dataset)", "head(dataset)", "percentage <- prop.table(table(dataset$Species))*100<br>cbind(freq=table(dataset$Species), percentage = percentage)", "summary(dataset)", "results <- resamples(list(lda=fit.lda, cart=fit.cart, knn=fit.knn, svm=fit.svm, rf=fit.rf)) <br>summary(results)", " predictions <- predict(fit.lda, validation) "];
 
                                                                                 results = ["Hello, World!", "[1] 120 5", "Sepal.Length Sepal.Width Petal.Length Petal.Width Species <br>1 5.1 3.5 1.4 0.2 setosa <br>2 4.9 3.0 1.4 0.2 setosa <br>3 4.7 3.2 1.3 0.2 setosa <br>5 5.0 3.6 1.4 0.2 setosa <br>6 5.4 3.9 1.7 0.4 setosa <br>7 4.6 3.4 1.4 0.3 setosa", "&nbsp;freq percentage<br> setosa &nbsp;&nbsp;&nbsp;40 33.33333<br>versicolor 40 33.33333<br>virginica &nbsp; 40 33.33333", "Sepal.Length Sepal.Width Petal.Length Petal.Width Species<br>Min. &nbsp;&nbsp; :4.300 Min. &nbsp;&nbsp; :2.00 Min. &nbsp;&nbsp; :1.000 Min. &nbsp;&nbsp; :0.100 setosa :40<br>1st Qu.:5.100 1st Qu.:2.80 1st Qu.:1.575 1st Qu.:0.300 versicolor:40<br>Median :5.800 Median :3.00 Median: 4.300 Median :1.350 virginica :40<br>Mean &nbsp; :5.834 Mean &nbsp; :3.07 Mean &nbsp; :3.748 Mean &nbsp; 1.213<br>3rd Qu.:6.400 3rd Qu.:3.40 3rd Qu.:5.100 3rd Qu.1.800<br>Max. &nbsp;&nbsp;:7.900 Max. &nbsp; :4.40 Max. &nbsp; :6.900 Max. &nbsp; :2.500", "Models: lda, cart, knn, svm, rf<br>Number of resamples: 10<br><br>Accuracy<br>&nbsp;&nbsp;&nbsp; Min. 1st Qu. Median &nbsp; Mean 3rd Qu. Max. NA's <br>lda  0.9167  0.9375 1.0000 0.9750 1 1 0<br>cart 0.8333  0.9167 0.9167 0.9417 1 1 0<br>knn  0.8333  0.9167 1.0000 0.9583 1 1 0<br>svm  0.8333  0.9167 0.9167 0.9417 1 1 0<br>rf 0.8333  0.9167 0.9583 0.9500 1 1 0<br><br>Kappa<br>&nbsp;&nbsp;&nbsp; Min. 1st Qu. Median &nbsp; Mean 3rd Qu. Max. NA's <br>lda  0.875  0.9062 1.0000 0.9625 1 1 0<br>cart 0.750  0.8750 0.8750 0.9125 1 1 0<br>knn  0.750  0.8750 1.0000 0.9375 1 1 0<br>svm  0.750  0.8750 0.8750 0.9125 1 1 <br>rf 0.750 0.8750 0.9375 0.9250 1 1 0", "Confusion Matrix and Statistics<br><br>Reference<br>setosa 10 0 0<br>versicolor 0 10 0<br>virginica 0 0 10<br><br>Overall Statistics<br><br>Accuracy: 1<br>95% CI: (0.8843, 1) <br>No Information Rate : 0.3333<br>P-Value [Acc > NIR]: 2.857e-15<br><br>Kappa: 1<br>Mcnemar's Test P-Value: NA<br><br>Statistics by Class:<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Class: setosa Class: versicolor Class: virginica<br>Sensitivity 1.0000 1.0000 1.0000<br>Specificity 1.0000 1.0000 1.0000<br>Pos Pred Value 1.0000 1.0000 1.0000<br>Neg Pred Value 1.0000 1.0000 1.0000<br>Prevalence 0.3333 0.3333 0.3333<br>Detection Rate 0.3333 0.3333 0.3333<br>Detection Prevalence 0.3333 0.3333 0.3333<br>Balanced Accuracy 1.0000 1.0000  1.0000"];
