--- a/Project/tutorials_rus/lrnrust.html
+++ b/Project/tutorials_rus/lrnrust.html
@@ -940,21 +940,6 @@
     </style>
     <script>
         setInterval(function() {
-            var car1 = document.getElementById("car1");
-            var car2 = document.getElementById("car2");
-            var car3 = document.getElementById("car3");
-            var car4 = document.getElementById("car4");
-            var car5 = document.getElementById("car5");
-            var car5_5 = document.getElementById("car5_5");
-            car1.style.animationDuration = ((Math.random() * 15) + 2) + "s";
-            car2.style.animationDuration = ((Math.random() * 15) + 2) + "s";
-            car3.style.animationDuration = ((Math.random() * 15) + 2) + "s";
-            car4.style.animationDuration = ((Math.random() * 15) + 2) + "s";
-            car5.style.animationDuration = ((Math.random() * 15) + 2) + "s";
-            car5_5.style.animationDuration = ((Math.random() * 15) + 2) + "s";
-
-        }, 2000);
-        setInterval(function() {
             var sm1 = document.getElementsByClassName("sm1");
             var sm2 = document.getElementsByClassName("sm2");
             var sm3 = document.getElementsByClassName("sm3");
@@ -1251,6 +1236,54 @@
         </div>
     </div>
     <script>
+        function cr1() {
+            var dur1 = ((Math.random() * 2) + 1);
+            var car1 = document.getElementById("car1");
+            car1.style.animationDelay = dur1 + "s";
+            setTimeout(cr1, (2 + dur1) * 2000);
+        }
+
+        function cr2() {
+            var dur2 = ((Math.random() * 2) + 1);
+            var car2 = document.getElementById("car2");
+            car2.style.animationDelay = dur2 + "s";
+            setTimeout(cr2, (2 + dur2) * 2000);
+        }
+
+        function cr3() {
+            var dur3 = ((Math.random() * 2) + 1);
+            var car3 = document.getElementById("car3");
+            car3.style.animationDelay = dur3 + "s";
+            setTimeout(cr3, (2 + dur3) * 2000);
+        }
+
+        function cr4() {
+            var dur4 = ((Math.random() * 2) + 1);
+            var car4 = document.getElementById("car4");
+            car4.style.animationDelay = dur4 + "s";
+            setTimeout(cr4, (2 + dur4) * 2000);
+        }
+
+        function cr5() {
+            var dur1 = ((Math.random() * 2) + 1);
+            var car5 = document.getElementById("car5");
+            car5.style.animationDelay = dur1 + "s";
+            setTimeout(cr5, (2 + dur1) * 2000);
+        }
+
+        function cr6() {
+            var dur6 = ((Math.random() * 2) + 1);
+            var car5_5 = document.getElementById("car5_5");
+            car5_5.style.animationDelay = dur6 + "s";
+            setTimeout(cr6, (2 + dur6) * 2000);
+        }
+        cr1();
+        cr2();
+        cr3();
+        cr4();
+        cr5();
+        cr6();
+        
         var codes = ["fn main() {<br>println!('Hello World!');<br>}"];
         var results = ["Hello World!"];
 
